common/synapse/wellknown-service.yaml
---
# Service for well-known
apiVersion: v1
kind: Service
metadata:
  name: matrix-wellknown
  namespace: synapse
spec:
  selector:
    app: matrix-wellknown
  ports:
    - port: 80
      targetPort: 80
